# portfolio-assistant

./: .gitignore  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/data/: sector_mapping.json
backend/app/routes/: portfolio.py
backend/app/services/: ai_explainer.py  portfolio_analysis.py  simulator.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AIInsights.tsx  ExposureCards.tsx  Header.tsx  PortfolioInput.tsx  RiskRadar.tsx  WhatIfSimulator.tsx
tests/: conftest.py  test_portfolio_analysis.py  test_routes.py  test_simulator.py
