[project]
name = "savr-portfolio"
version = "0.1.0"
description = "SAVR Portfolio Copilot — AI-powered portfolio analysis and simulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
